--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -7,9 +7,7 @@
   <div>
     <img [src]="event.locationDescriptor.mapUrl">
   </div>
-
-
-  <form [formGroup]="reservationForm">
+  <form [formGroup]="reservationForm" (submit)="submitForm(event.event.shortName, reservationForm.value)">
     <div>
         <ul>
           <li *ngFor="let category of event.ticketCategories;let counter = index"
@@ -25,5 +23,7 @@
         </ul>
     </div>
     {{reservationForm.value|json}}
+
+    <button type="submit">Next</button>
   </form>
 </div>
