add cancel pending reservation

--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -40,6 +40,7 @@
       </div>
     </div>
     <pre>{{contactAndTicketsForm.value | json}}</pre>
+    <button type="button" (click)="cancelPendingReservation(reservation.event.shortName, reservation.reservationId)">Cancel</button>
     <button type="submit">Next</button>
   </form>
 </div>
