--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-7">
           <h2>Event informations</h2>
-          <div>Organized by ... &lt;<a href="">blabla@blabla</a>&gt;</div>
+          <div>Organized by {{event.organizationName}} &lt;<a [href]="'mailto:'+ event.organizationEmail">{{event.organizationEmail}}</a>&gt;</div>
         </div>
         <div class="col-md-5"><img [src]="event.locationDescriptor.mapUrl" class="img-responsive"></div>
     </div>
@@ -31,8 +31,11 @@
           </li>
         </ul>
     </div>
-    {{reservationForm.value|json}}
-
-    <button type="submit">Next</button>
+    <!--{{reservationForm.value|json}}-->
+    <hr>
+    <div class="row d-flex justify-content-between">
+      <div class="col-md-4 order-1 col-12"><button type="submit" class="block-button btn btn-success">Next</button></div>
+      <div class="col-md-4 order-0 col-12 "><button type="button" class="block-button btn btn-outline-dark">Return to event site</button></div>
+    </div>
   </form>
 </div>
