#1 styled buttons, add link to websiteurl

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -35,7 +35,7 @@
     <hr>
     <div class="row d-flex justify-content-between">
       <div class="col-md-4 order-1 col-12"><button type="submit" class="block-button btn btn-success">Next</button></div>
-      <div class="col-md-4 order-0 col-12 "><button type="button" class="block-button btn btn-outline-dark">Return to event site</button></div>
+      <div class="col-md-4 order-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-outline-dark">Return to event site</a></div>
     </div>
   </form>
 </div>
