--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -1,7 +1,3 @@
-<p>
-  booking works!
-</p>
-
 <div *ngIf="reservation">
   <form [formGroup]="contactAndTicketsForm" (submit)="submitForm(reservation.event.shortName, reservation.reservationId, contactAndTicketsForm.value)">
 
@@ -40,7 +36,15 @@
       </div>
     </div>
     <pre>{{contactAndTicketsForm.value | json}}</pre>
-    <button type="button" (click)="cancelPendingReservation(reservation.event.shortName, reservation.reservationId)">Cancel</button>
-    <button type="submit">Next</button>
+
+
+    <div class="row d-flex justify-content-between">
+      <div class="col-md-4 order-1 col-12">
+        <button type="submit" class="block-button btn btn-success">Next</button>
+      </div>
+      <div class="col-md-4 order-0 col-12 ">
+        <button type="button" class="block-button btn btn-outline-dark" (click)="cancelPendingReservation(reservation.event.shortName, reservation.reservationId)">Cancel</button>
+      </div>
+    </div>
   </form>
 </div>
