#1 display calendar links

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -12,7 +12,10 @@
               <li><fa-icon [icon]="['far', 'calendar-alt']"></fa-icon></li>
               <li>
                 <fa-icon [icon]="['far', 'calendar-plus']"></fa-icon> {{'show-event.add-to-calendar' | translate}}
-                <a title="show-event.add-to-calendar google" target="_blank" href=""><i class="fa fa-calendar-check-o"></i></a>
+                <a title="{{'show-event.add-to-calendar' | translate}} google" target="_blank"
+                  href="/api/v2/public/event/{{event.shortName}}/calendar/{{translate.currentLang}}?type=google"><fa-icon [icon]="['fab', 'google']"></fa-icon></a>
+                &ngsp;<a title="{{'show-event.add-to-calendar' | translate}} iCalendar" target="_blank"
+                  href="/api/v2/public/event/{{event.shortName}}/calendar/{{translate.currentLang}}"><fa-icon [icon]="['far', 'calendar-check']"></fa-icon></a>
               </li>
               <li>
                 <fa-icon [icon]="['far', 'compass']"></fa-icon> {{event.location}}
