#1 add event description

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -27,6 +27,8 @@
     </div>
 
     <hr>
+
+    <div [innerHtml]="event.description[translate.currentLang]"></div>
 </div>
 
 <div *ngIf="tmpEvent">
