--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -2,7 +2,11 @@
   <div class="form-group row" [formArrayName]="field.name">
     <label class="col-sm-3 col-form-label">{{field.labelDescription}}</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" formControlName="0">
+      <input *ngIf="field.inputField" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
+      <input *ngIf="field.euVat" [attr.type]="field.inputType" [attr.placeholder]="field.placeholderDescription" class="form-control" formControlName="0">
+      <textarea *ngIf="field.textareaField" class="form-control" [attr.placeholder]="field.placeholderDescription" formControlName="0"></textarea>
+      <select *ngIf="field.countryField" class="form-control" formControlName="0"></select>
+      <select *ngIf="field.selectField" class="form-control" formControlName="0"></select>
     </div>
   </div>
 </div>
